card layout bug

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -47,51 +47,51 @@ h1 {
   perspective: 1000px;
   position: relative;
   margin: 5em 2.8em 20px 2.8em;
-  height: 400px;
-  width: 250px;
+  height: 300px;
+  width: 200px;
 }
 
 .card-container:hover .card-flip {
   transform: rotateY(180deg); /* Added hover effect */
 }
 
-
 .card-flip {
-  width: 100%;
-  height: 100%;
+  width: 250px;
+  height: 300px;
   position: absolute;
   transform-style: preserve-3d;
-  transition: transform 0.5s;}
-
-
-.card-back {
-  transform: rotateY(180deg);
+  transition: transform 0.5s;
 }
 
 .card-front,
 .card-back {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height:inherit;
   backface-visibility: hidden;
-  padding: 5px;
   text-align: center;
+  border: 1px solid;
+  background-color: white;
 }
 
 .card-back {
   transform: rotateY(180deg);
 }
 
-
-.card-front {
-  /* Styles specific to the front side */
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 0.2fr);
+}  
+/*
+.service-card .MuiTypography-root {
+    font-size: 24px; 
+}
+*/
+.service-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.card-back {
-  transform: rotateY(180deg);
-  /* Styles specific to the back side */
-}
-
+/*photo gallery container*/
 .enlarge {
   animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
   transform: scale(15.1);
@@ -202,25 +202,3 @@ nav a:hover {
   color: #61dafb;
 }
 
-.services-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 0.2fr);
-}  
-
-.service-card {
-    padding: 5px;
-    margin-left: 2.8em;
-    margin-bottom: 20px;
-    margin-top: 5em; 
-    height: 400px;
-    width: 250px;
-    text-align: center;
-}
-
-.service-card .MuiTypography-root {
-    font-size: 24px; 
-}
-
-.service-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
